--- a/w5.tex
+++ b/w5.tex
@@ -21,7 +21,7 @@ Carlo Hernandez\\herna463@umn.edu
 \begin{document}
 \maketitle
 \section{Introduction}
-In this article, we explore the various implementations of Monte Carlo Simulations and their impact within the environment they are used. Some of these implementations only change at a structure level, while others change at a high level to fit the needs of a specific problem. These implementations include Model Based Monte Carlo Search for Playing Atari Games, Parallelized Monte Carlo Tree Search, Monte Carlo Planning for Real Time Strategy Games, [insert kohei topics]
+In this article, we explore the various implementations of Monte Carlo Simulations and their impact within the environment they are used. Some of these implementations only change at a structure level, while others change at a high level to fit the needs of a specific problem. These implementations include Model Based Monte Carlo Search for Playing Atari Games, Parallelized Monte Carlo Tree Search, Monte Carlo Planning for Real Time Strategy Games, Expected-outcome, Monte Carlo evaluation by average score, Partially knowledge based system, UCT, PBBM, Objective Monte Carlo, Parallel Algorithm
 
 \section{Expected-outcome}
 The first Monte-Carlo simulation appeared on early 1990. B. Abramson developed (expected-outcome) model which returns expected value of the game’s outcome\cite{abramson1990expected}. A standard model of static evaluators is Min-Max tree search. For the difficulty of setting of evaluation, however, the design is viewed as impossible. Moreover, it was too difficult to evaluate the accuracy due to the absence of standard evaluation to grasp a strategy in the entire game. From this perspective, Abramson defined as (Expected-Outcome) values as 
