--- a/paper/w5.bib
+++ b/paper/w5.bib
@@ -6,7 +6,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@article{silver2016mastering,
+  title={Mastering the game of Go with deep neural networks and tree search},
+  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  journal={Nature},
+  volume={529},
+  number={7587},
+  pages={484--489},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
 @incollection{chaslot2008parallel,
 	Author = {Chaslot, Guillaume MJ-B and Winands, Mark HM and van Den Herik, H Jaap},
 	Booktitle = {Computers and Games},
